# psephology

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docs.sh  fourmolu.yaml  psephology.cabal  verify.sh
.github/workflows/: haskell-ci.yml  haskell.yml
examples/: ExampleGenerateBLT.hs  ExampleGeorgiaRedistricting.hs  ExampleMRP.hs  ExampleSampleParliament.hs
examples/georgia/: georgia.csv
examples/heatmaps/: heatmap.py
examples/mrp/: README.md
src/: Psephology.hs
src/Psephology/: BLT.hs  Candidate.hs  Condorcet.hs  Counting.hs  Efficiency.hs  ElectoralSystem.hs  Fraud.hs  McKelveySchofield.hs  NumberOfParties.hs  Parliament.hs  Pathologies.hs  ProportionalRepresentation.hs  Quotas.hs  SampleElections.hs  SinglePeakedPreferences.hs  Spoilers.hs  Strategy.hs  Utils.hs  Voter.hs
src/Psephology/ElectoralSystems/: Borda.hs  Condorcet.hs  Plurality.hs  Rated.hs  Runoff.hs  Sortition.hs  Thiele.hs
src/Psephology/Polling/: MRP.hs  Swingometer.hs
src/Psephology/ProportionalRepresentation/: HighestAverages.hs  LargestRemainder.hs
src/Psephology/Redistricting/: Utilitarian.hs
src/Psephology/Spoilers/: Clones.hs  Proxies.hs  Utils.hs
src/Psephology/Strategy/: Abstention.hs  Betrayal.hs  Burying.hs  Compression.hs  Turkeys.hs
test/: .gitignore  Main.hs  ProportionalRepresentation.hs  Redistricting.hs
test/BLT/: tennessee.blt
test/Fraud/: Fraud.hs  graphs.py  source.md
test/heatmaps/: heatmap.py
test/redistricting/: georgia.csv  georgia.json  gwinnett.css  gwinnett.csv  journal1.csv  journal2.csv  test1.csv
