cabal-version:      3.0
name:               psephology

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           Library dedicated to the study of Psephology.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             davidboers
maintainer:         kwmmineccraft@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Psephology
                      Psephology.BLT
                      Psephology.Candidate
                      Psephology.Spoilers
                      Psephology.Spoilers.Clones
                      Psephology.Spoilers.Proxies
                      Psephology.Condorcet
                      Psephology.ElectoralSystem
                      Psephology.McKelveySchofield
                      Psephology.Parliament
                      Psephology.Pathologies
                      Psephology.Quotas
                      Psephology.SampleElections
                      Psephology.SinglePeakedPreferences
                      Psephology.Voter

    -- Modules included in this library but not exported.
    other-modules:
        Psephology.Utils
        Psephology.Spoilers.Utils

    build-depends:
        base,
        list-extras,
        random,
        random-fu
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite psephology-test
    import:           warnings

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base,
        psephology,
        tasty,
        tasty-hunit,
        tasty-tap
    hs-source-dirs:   test
    default-language: Haskell2010
