cabal-version:      3.0
name:               psephology

-- An API change is non-breaking if it makes no amendment to any existing function's type signature.
-- The changes may only involve new functions, bindings, types, classes, non-orphan instances, etc.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           Library dedicated to the study of Psephology.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             davidboers
maintainer:         kwmmineccraft@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Psephology
                      Psephology.BLT
                      Psephology.Candidate
                      Psephology.Condorcet
                      Psephology.Efficiency
                      Psephology.ElectoralSystem
                      Psephology.ElectoralSystems.Borda
                      Psephology.ElectoralSystems.Condorcet
                      Psephology.ElectoralSystems.Plurality
                      Psephology.ElectoralSystems.Rated
                      Psephology.ElectoralSystems.Runoff
                      Psephology.ElectoralSystems.Sortition
                      Psephology.ElectoralSystems.Thiele
                      Psephology.McKelveySchofield
                      Psephology.Parliament
                      Psephology.Pathologies
                      Psephology.ProportionalRepresentation
                      Psephology.ProportionalRepresentation.HighestAverages
                      Psephology.ProportionalRepresentation.LargestRemainder
                      Psephology.Quotas
                      Psephology.Redistricting.Utilitarian
                      Psephology.SampleElections
                      Psephology.SinglePeakedPreferences
                      Psephology.Spoilers
                      Psephology.Spoilers.Clones
                      Psephology.Spoilers.Proxies
                      Psephology.Strategy
                      Psephology.Strategy.Abstention
                      Psephology.Strategy.Betrayal
                      Psephology.Strategy.Burying
                      Psephology.Strategy.Compression
                      Psephology.Strategy.Turkeys
                      Psephology.Voter

    -- Modules included in this library but not exported.
    other-modules:
        Psephology.Utils
        Psephology.Spoilers.Utils
        Psephology.Counting

    build-depends:
        base,
        list-extras,
        random,
        random-fu,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite psephology-test
    import:           warnings

    -- Modules included in this executable, other than Main.
    other-modules:
        ProportionalRepresentation
        Redistricting

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base,
        psephology,
        tasty,
        tasty-hunit,
        tasty-tap,
        aeson
    hs-source-dirs:   test
    default-language: Haskell2010
